--- a/Data_Prep_Cleaning.Rmd
+++ b/Data_Prep_Cleaning.Rmd
@@ -15,6 +15,8 @@ library(patchwork)
 library(ggembl)
 library(here)
 library(lmerTest)
+library(ggpubr)
+library(writexl)
 `%nin%` = Negate(`%in%`)
 ```
 
@@ -182,6 +184,8 @@ stats <- Mesnage_2023_human_counts %>% left_join(Mesnage_2023_general_count_stat
 read_counts_metadata <- Mesnage_2023_metadata %>% select(1:3) %>% left_join(stats %>% select(SampleID, human_microbial_ratio), by =  c("sample.id" = "SampleID"))
 
 DNA_concentrations <- read_xlsx(here("Metadata", "20231030_DNA Source Plates_sample name_DNA conc.xlsx"))
+DNA_concentrations$`Sample No.` <- gsub("-", "_", DNA_concentrations$`Sample No.`)
+DNA_concentrations <- Mesnage_2023_metadata %>% select(sample.id, Study_Patient) %>% left_join(DNA_concentrations %>% select(1:2), by = c("sample.id" = "Sample No."))
 ```
 
 ## mOTUs-CAZy abundances / prevalence
