--- a/Figure_1C.Rmd
+++ b/Figure_1C.Rmd
@@ -20,7 +20,9 @@ library(ggembl)
 Mesnage_2023_metadata_before_after <- Mesnage_2023_metadata %>% filter(Timepoint == "Before" | Timepoint == "After") %>% count(Study_Patient) %>% filter(n > 1)
 Mesnage_2023_metadata_before_after <- Mesnage_2023_metadata %>% filter(Timepoint == "Before" | Timepoint == "After") %>% filter(Study_Patient %in% Mesnage_2023_metadata_before_after$Study_Patient)
 
-clinical_markers_of_interest <- c("Glucose", "HbA1c", "Insulin", "HDL", "LDL", "Triglycerides", "GGT", "Uric_Acid", "Urea", "Body_Weight")
+Mesnage_2023_metadata_before_after <- Mesnage_2023_metadata_before_after %>% mutate(BMI = Body_Weight / (Height/100)^2 )
+
+clinical_markers_of_interest <- c("Glucose", "HbA1c", "HDL", "LDL", "Triglycerides", "GGT", "Uric_Acid", "Urea", "Body_Weight", "BMI")
 Mesnage_2023_metadata_before_after_clinical_markers <- Mesnage_2023_metadata_before_after %>% select(1:12, all_of(clinical_markers_of_interest))
 
 signif.num <- function(x) {
@@ -42,9 +44,7 @@ for (marker in clinical_markers_of_interest) {
 wilcox_results_df <- bind_rows(wilcox_results)
 wilcox_results_df <- wilcox_results_df %>% mutate(pval.adj = p.adjust (p, method = "fdr")) ## Calculate adjusted p-values, but use raw p-values as this is what Robin et al. always do for their more clinical variables, which is obviously different from an omics-type of experiment.
 
-y_positions <- c(250, 10, 120, 120, 280, 400, 105, 20, 60, 140) ## Have to double-check the 4th (HDL) and 5th (LDL) values to see if they work well in the figure
-
-wilcox_results_df <- wilcox_results_df %>% mutate(y.position = y_positions) %>% rename("Clinical_Marker" = 1)
+wilcox_results_df <- wilcox_results_df %>% rename("Clinical_Marker" = 1)
 Mesnage_2023_metadata_before_after_clinical_markers <- Mesnage_2023_metadata_before_after_clinical_markers %>%
 arrange(Study_Patient, Timepoint) ## you need to reorder the input dataframe to match things https://github.com/tidyverse/ggplot2/issues/3535
 
@@ -52,7 +52,7 @@ arrange(Study_Patient, Timepoint) ## you need to reorder the input dataframe to 
 
 ## Now make all the subpanels for Figure 1C
 ```{r}
-clinical_markers_n <- Mesnage_2023_metadata_before_after_clinical_markers %>% select(sample.id, Timepoint, Glucose:Body_Weight) %>% group_by(Timepoint) %>% summarise(across(Glucose:Body_Weight, ~ sum(!is.na(.x)))) ## These numbers need to be displayed in the plots to have an n for each comparison
+clinical_markers_n <- Mesnage_2023_metadata_before_after_clinical_markers %>% select(sample.id, Timepoint, Glucose:BMI) %>% group_by(Timepoint) %>% summarise(across(Glucose:BMI, ~ sum(!is.na(.x)))) ## These numbers need to be displayed in the plots to have an n for each comparison
 
 Glucose_Figure <- ggplot() +
   theme_publication() +
@@ -75,17 +75,6 @@ HbA1c_Figure <- ggplot() +
   scale_fill_manual(values=c('#366eb2','#bc3f60')) +
   ylab("HbA1c (%)") +
   geom_text(data = clinical_markers_n %>% select(Timepoint, HbA1c), aes(x = Timepoint, y = 4.5, label = paste0("n=", HbA1c)), size = 2)
-
-Insulin_Figure <- ggplot() +
-  theme_publication() +
-  geom_boxplot(data = Mesnage_2023_metadata_before_after_clinical_markers, aes(x = Timepoint, y = Insulin, fill = Timepoint), outlier.shape = NA) +
-  geom_point(data = Mesnage_2023_metadata_before_after_clinical_markers, aes(x = Timepoint, y = Insulin), size = 0.2, position = position_jitter(height = 0, width = 0.2, seed = 100)) +
-  geom_line(data = Mesnage_2023_metadata_before_after_clinical_markers, aes(x = Timepoint, y = Insulin, group = Study_Patient), linetype = "11", linewidth = 0.3, alpha = 0.4, position = position_jitter(height = 0, width = 0.2, seed = 100)) +
-  stat_pvalue_manual(wilcox_results_df %>% filter(Clinical_Marker == "Insulin"), label = "{p.adj}", color = "black", size = 2) + 
-  theme(axis.title.x=element_blank(), axis.text.x=element_blank(), axis.ticks.x=element_blank(), legend.position = "none") +
-  scale_fill_manual(values=c('#366eb2','#bc3f60')) +
-  ylab("Insulin (mIU/l)") +
-  geom_text(data = clinical_markers_n %>% select(Timepoint, Insulin), aes(x = Timepoint, y = 0, label = paste0("n=", Insulin)), size = 2)
 
 HDL_Figure <- ggplot() +
   theme_publication() +
@@ -163,4 +152,15 @@ Body_Weight_Figure <- ggplot() +
   scale_fill_manual(values=c('#366eb2','#bc3f60')) +
   ylab("Body Weight (kg)") +
   geom_text(data = clinical_markers_n %>% select(Timepoint, Body_Weight), aes(x = Timepoint, y = 42, label = paste0("n=", Body_Weight)), size = 2)
+
+BMI_Figure <- ggplot() +
+  theme_publication() +
+  geom_boxplot(data = Mesnage_2023_metadata_before_after_clinical_markers, aes(x = Timepoint, y = BMI, fill = Timepoint), outlier.shape = NA) +
+  geom_point(data = Mesnage_2023_metadata_before_after_clinical_markers, aes(x = Timepoint, y = BMI), size = 0.2, position = position_jitter(height = 0, width = 0.2, seed = 100)) +
+  geom_line(data = Mesnage_2023_metadata_before_after_clinical_markers, aes(x = Timepoint, y = BMI, group = Study_Patient), linetype = "11", linewidth = 0.3, alpha = 0.4, position = position_jitter(height = 0, width = 0.2, seed = 100)) +
+  stat_pvalue_manual(wilcox_results_df %>% filter(Clinical_Marker == "Body_Weight"), label = "{p.adj}", color = "black", size = 2) + 
+  theme(axis.title.x=element_blank(), axis.text.x=element_blank(), axis.ticks.x=element_blank(), legend.position = "none") +
+  scale_fill_manual(values=c('#366eb2','#bc3f60')) +
+  ylab("BMI (kg/m2)") +
+  geom_text(data = clinical_markers_n %>% select(Timepoint, BMI), aes(x = Timepoint, y = 40, label = paste0("n=", BMI)), size = 2)
 ```
